# CubeSat_RadioEmulator

./: README.md  pyproject.toml
cubesat_simradio/: __main__.py  emusat.py  emusats_configs.py  example.py  models.py  radio_mock.py  radio_packet.py  sat_path.py  utils.py
cubesat_simradio/examples/: example.py  frame_parser.py  parser_test.py  radio_packet.py  register_commands.py  sx127x_models.py  tle_loop.py
cubesat_simradio/examples/NORBI2_TMI_formats/: tmi_pss0.csv  tmi_pss1.csv  tmi_pss2.csv  tmi_pss3.csv
cubesat_simradio/examples/NORBI_TMI_formats/: tmi0.csv  tmi1.csv  tmi2.csv  tmi3.csv  tmi4.csv  tmi5.csv  tmi6.csv  tmi7.csv  tmi8.csv
